Bug 552105 - [13] Text block indentation not preserved on running the application
Change-Id: I2b8979666292aff63eae31797942b7ffe18ad20f
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>